increased size of emojis

--- a/extension.html
+++ b/extension.html
@@ -6,28 +6,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Emojis</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-  <link rel="icon" href="./cat.png"><style>
-  /* Light mode */
-@media (prefers-color-scheme: light) {
-  body {
-    background: white;
-    color: black;
-  }
-}
+  <link rel="icon" href="./cat.png">
+  <style>
+    /* Light mode */
+    @media (prefers-color-scheme: light) {
+      body {
+        background: white;
+        color: black;
+      }
+    }
 
-/* Dark mode */
-@media (prefers-color-scheme: dark) {
-  body {
-    background: black;
-    color: white;
-  }
-}</style>
+    p {
+      font-size: 19px;
+    }
+
+    /* Dark mode */
+    @media (prefers-color-scheme: dark) {
+      body {
+        background: black;
+        color: white;
+      }
+    }
+  </style>
 </head>
 
 <body>
   <div class="container">
     <h1 class="is-size-2">All Emojis</h1>
-    
+
     <h3 class="is-size-3">Faces and People</h3>
     <p>
       😀 😃 😄 😁 😆 😅 🤣 😂 🥹 🙂 🙃 😉 😊 😇 🥰 😍 🤩 😘 😗 ☺️ 😚 😙 🥲 😋 😛 😜 🤪 😝 🤑 🤗 🫢 🤭 🤫 🤔 🫡 🤐 🤨 😐️
